# capstone-predictive-maintenance

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.service  Dockerfile.simple  IMPLEMENTATION_SUMMARY.md  LSTM_SETUP.md  MODEL_COMPARISON_SUMMARY.md  NOTEBOOK_TO_SCRIPT.md  README.md  TESTING_SUMMARY.md  WEB_SERVICE_TEST_REPORT.md  app.py  app_simple.py  deploy_hf.sh  deploy_hf_simple.sh  main.ipynb  predict.py  pyproject.toml  requirements.txt  service.py  service_test.py  train.py
